--- a/style.css
+++ b/style.css
@@ -644,6 +644,9 @@ padding-bottom: 60px;
     flex-wrap: wrap;
     /* margin-bottom: 100px; */
  }
+ .client-slider-section{
+    width: 100%;
+ }
 .swiper {
       width: 100%;
       height: 100%;
