--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .navigation-container{
     /* padding: 10px 240px; */
-    /* padding-top: 200px; */
+    padding-top: 30px;
     width: 100%;
     display: flex;
     justify-content: space-between;
